# openxla-iree

.github/workflows/: snorkell-auto-documentation.yml
experimental/dispatch_profiler/: manifest.py
experimental/distributed/python/: pyproject.toml
integrations/tensorflow/python_projects/iree_tf/iree/tf/support/: trace_utils.py
