[project]
name = "iree-distributed"
version = "0.0.0"
dependencies = [
    "iree-compiler",
    "iree-runtime",
    "jax[cpu]",
    "mpi4py",
    "numpy",
    "fickling~=0.1.0",
]
[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "packaging",
]
build-backend = "setuptools.build_meta"
